W01 Assignment: Home Page#FixingAlignmentErrors

--- a/styles/base.css
+++ b/styles/base.css
@@ -13,7 +13,7 @@
 nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     background-color: var(--foreground);
     padding: 15px 0;
     margin: 0;
@@ -22,11 +22,8 @@ nav {
 
 nav a {
     color: white;
-    margin: 0 50px;
     text-decoration: none;
-    font-size: 25px;
-    margin-left: 100px;
-    padding: 10px;
+    font-size: 28px;
 }
 
 nav a:hover {
@@ -36,12 +33,13 @@ nav a:hover {
 }
 
 header {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto;
-    height: 190px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 180px;
     background-color: var(--background);
     margin: 0;
+    padding: 20px
 }
 
 header h1 {
@@ -52,18 +50,19 @@ header h1 {
 
 main {
     display: grid;
-    height: 110vh;
+    min-height: 90vh;
     grid-template-columns: 2fr 1fr;
-    gap: 20px;
+    gap: 15px;
     padding: 20px;
-    width: 100%;
+    max-width: 100%;
 }
 
 footer {
-    display: block;
-    grid-column: 1 / 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 80px;
-    margin: 0;
     width: 100%;
     background-color: var(--background);
     text-align: center;
@@ -72,12 +71,18 @@ footer {
 footer p {
     align-items: center;
     font-size: 20px;
+    margin: 5px 0;
 }
 
 li {
     font-size: 20px;
-    padding: 10px;
     margin: 20px;
+}
+
+nav a,
+header h1,
+li {
+    padding: 10px;
 }
 
 /* Class Selectors */
@@ -92,43 +97,44 @@ li {
 }
 
 .card img {
-    max-width: 210px;
-    height: auto;
-    margin-left: 30px;
-    margin-top: 10px;
-    box-shadow: 0 0 30px gray;
-    border: 1px solid #301300;
-    padding: 2px;
+    max-width: 25%;
+    margin-left: 20px;
+    box-shadow: 0 0 20px gray;
 }
 
 .card .aboutmealign {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .card p {
     flex-grow: 1;
-    padding-right: 20px;
-    padding-left: 20px;
-    font-size: 20px;
+}
+
+.card p,
+.usaalign p {
+    padding: 15px 20px;
+    font-size: 21px;
 }
 
 .footercolor {
     color: #261908;
+    font-size: 18px;
 }
 
 .usaalign {
     display: flex;
-    margin-top: 30px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    gap: 20px;
 }
 
 .usaalign p {
     flex-grow: 1;
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-left: 40px;
-    float: right;
 }
 
 .usah2 {
@@ -142,5 +148,5 @@ li {
     box-sizing: border-box;
     text-align: center;
     border-radius: 10px;
-    margin: -10px 0 50px 0;
+    margin: -10px 0 20px 0;
 }
